2004-05-07  David Schleef  <ds@schleef.org>

	* common/m4/as-compiler-flag.m4: Properly quote arguments,
	which may contain commas.  Fixes detection of -Wa,-mregnames

2004-05-06  David Schleef  <ds@schleef.org>

	Changes to handle compilers that don't have variadic macro
	support.  In particular, glib headers define some inlines
	that need G_LOG_DOMAIN defined.  Additional fixes for MSVC
	builds.
	* gst/Makefile.am:
	* gst/cothreads.c:
	* gst/elements/gstfdsink.c:
	* gst/elements/gstfdsrc.c:
	* gst/elements/gstfilesink.c:
	* gst/elements/gstfilesrc.c:
	* gst/gst_private.h:
	* gst/gstatomic.c:
	* gst/gstcaps.c: (gst_caps_append):
	* gst/gstcpu.c: (gst_cpuid_i386):
	* gst/gstelement.c:
	* gst/gsterror.c:
	* gst/gstfilter.c:
	* gst/gstinfo.h:
	* gst/gstprobe.c:
	* gst/gstquery.c:
	* gst/gstregistry.c:
	* gst/gststructure.c:
	* gst/gsttaginterface.c:
	* gst/gsttrace.c: (gst_trace_new):
	* gst/gsttrashstack.c:
	* gst/gsturi.c:
	* gst/gstvalue.c:
	* gst/parse/grammar.y:
	* gst/parse/parse.l:
	* tools/gst-inspect.c: (main):
	* tools/gst-launch.c: (main):
	* tools/gst-xmlinspect.c: (PUT_STRING):

2004-05-06  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/elements/gstfilesrc.c: (gst_filesrc_get),
	(gst_filesrc_change_state), (gst_filesrc_srcpad_event):
	* gst/elements/gstfilesrc.h:
	  send NEW_MEDIA events correctly
	* gst/elements/gsttypefindelement.c: (start_typefinding),
	(gst_type_find_element_handle_event):
	  restart typefinding when we get a NEW_MEDIA event
	* gst/gstbin.c: (gst_bin_remove_func), (gst_bin_change_state),
	(gst_bin_dispose):
	  don't die when someone removes elements in callbacks
	* gst/gstelement.c: (gst_element_change_state):
	  improve debugging
	* gst/gstpad.c: (gst_pad_pull), (gst_pad_call_chain_function):
	  we need a NEW_MEDIA event to engage a link
	* gst/gsttrace.c: (gst_trace_new), (gst_alloc_trace_set_flags_all):
	  don't g_print debugging stuff
	* testsuite/caps/simplify.c: (check_caps):

2004-05-04  Benjamin Otte  <otte@gnome.org>