@@ -1,5 +1,10 @@
 2004-05-07  David Schleef  <ds@schleef.org>
 
+	* testsuite/caps/caps.c: (test3), (main): A check for appending
+	ANY caps.
+
+2004-05-07  David Schleef  <ds@schleef.org>
+
 	* common/m4/as-compiler-flag.m4: Properly quote arguments,
 	which may contain commas.  Fixes detection of -Wa,-mregnames
 
